# robot-war-firmware

./: .gitignore  README.md  README.rst  west.yml
docs/: gw_state_schema.json  nRF_Robot_war_firmware_module_description.md
samples/aws_ble_mesh_gateway/: CMakeLists.txt  prj.conf
samples/aws_ble_mesh_gateway/boards/: nrf9160dk_nrf9160_ns.overlay
samples/aws_ble_mesh_gateway/src/events/: CMakeLists.txt  mesh_module_event.c  mesh_module_event.h  robot_module_event.h
samples/aws_ble_mesh_gateway/src/modules/: Kconfig.mesh_module  mesh_module.c  robot_module.c
samples/common/nRF9160dk_uart_interface/: messages.h
samples/gateway_nRF52840/: CMakeLists.txt  Kconfig  prj.conf
samples/gateway_nRF52840/boards/: nrf9160dk_nrf52840.overlay  nrf9160dk_nrf52840_0_14_0.overlay
samples/gateway_nRF52840/src/: main.c  model_handler.c  model_handler.h  robot_movement_cli.c  robot_movement_cli.h  uart_handler.c  uart_handler.h
samples/gateway_nRF9160/: CMakeLists.txt  Kconfig  prj.conf
samples/gateway_nRF9160/src/: main.c
samples/gateway_nRF9160/src/events/: CMakeLists.txt  cloud_module_event.h  mesh_module_event.c  mesh_module_event.h  modem_module_event.h  robot_module_event.h  ui_module_event.h
samples/mesh_bot/: CMakeLists.txt
samples/mesh_bot/include/: id.h  id_srv.h  movement.h  movement_srv.h  robot.h  robot_srv.h
samples/mesh_bot/src/: model_handler.c  model_handler.h
samples/mesh_bot/src/models/: CMakeLists.txt  Kconfig  Kconfig.id_srv  id_srv.c  movement_srv.c  robot_srv.c
samples/mesh_bot/src/modules/: mesh_module.c
(+9 files in other folders)
